@@ -31,7 +31,7 @@ public class CommentQueryService {
     private static final int DEFAULT_PAGE_SIZE = 20;
 
     /**
-     * 게시글의 부모댓글 목록 조회 (커서 페이지네이션)
+     * 게시글의 부모댓글 목록 조회
      */
     public CursorPageResponseDto<CommentResponseDto> getParentComments(
             GroupPost post,
@@ -41,24 +41,21 @@ public class CommentQueryService {
             post, cursor
         );
 
-        // 페이지 크기로 제한
         List<Comment> limitedComments = comments.stream()
                 .limit(DEFAULT_PAGE_SIZE + 1)
-                .collect(Collectors.toList());
+                .toList();
 
         boolean hasMore = limitedComments.size() > DEFAULT_PAGE_SIZE;
         if (hasMore) {
             limitedComments = limitedComments.subList(0, DEFAULT_PAGE_SIZE);
         }
 
-        // 답글 개수 배치 조회 (N+1 문제 해결)
         List<Long> commentIds = limitedComments.stream()
                 .map(Comment::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Long, Long> replyCountMap = getReplyCountMap(commentIds);
 
-        // DTO 변환
         List<CommentResponseDto> responseDtos = limitedComments.stream()
                 .map(comment -> CommentResponseDto.from(
                     comment,
@@ -78,17 +75,15 @@ public class CommentQueryService {
     }
 
     /**
-     * 특정 댓글의 답글 목록 조회 (커서 페이지네이션)
+     * 특정 댓글의 답글 목록 조회
      */
     public CommentThreadResponseDto getCommentThread(
             Long commentId,
             Long cursor
     ) {
-        // 부모 댓글 조회
         Comment parentComment = commentRepository.findByIdWithAuthor(commentId)
                 .orElseThrow(() -> new CustomException(ErrorCode.COMMENT_NOT_FOUND));
 
-        // 논리삭제 체크 (PK 조회 최적화로 애플리케이션에서 처리)
         if (parentComment.getDeletedDate() != null) {
             throw new CustomException(ErrorCode.COMMENT_NOT_FOUND);
         }
@@ -97,22 +92,19 @@ public class CommentQueryService {
             throw new CustomException(ErrorCode.INVALID_COMMENT_THREAD);
         }
 
-        // 답글 목록 조회
         List<Comment> replies = commentRepository.findRepliesByParent(
             parentComment, cursor
         );
 
-        // 페이지 크기로 제한
         List<Comment> limitedReplies = replies.stream()
                 .limit(DEFAULT_PAGE_SIZE + 1)
-                .collect(Collectors.toList());
+                .toList();
 
         boolean hasMore = limitedReplies.size() > DEFAULT_PAGE_SIZE;
         if (hasMore) {
             limitedReplies = limitedReplies.subList(0, DEFAULT_PAGE_SIZE);
         }
 
-        // DTO 변환
         CommentResponseDto parentDto = CommentResponseDto.from(
             parentComment,
             commentRepository.countRepliesByParentId(commentId)
